[package]
name = "stream_split"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
async-stream = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }
itertools = "0.13"
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "benchmark"
harness = false
